--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "expo": "^44.0.6",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
